[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project]
name = "deep-helpers"
description = ""
requires-python = ">=3.8"
authors = [
    {name = "Scott Chase Waggener", email = "tidalpaladin@protonmail.com"},
]
dependencies = [
    "torch",
    "pytorch-lightning",
    "torchmetrics",
    "numpy",
    "pandas",
    "matplotlib",
    "strenum",
    "scikit-learn",
    "wandb",
    "jsonargparse[signatures]>=4.17.0",
    "registry @ git+https://github.com/TidalPaladin/callable-registry.git",
    "safetensors>=0.4.0",
    "torchvision>=0.16.1",
    "einops>=0.7.0",
]
readme = "README.md"
license = {text = "Apache"}
dynamic = ["version"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6,E203"
in-place = true
recursive = true
aggressive = 3

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = false

[tool.pdm]
version = { source = "scm" }

[tool.pdm.dev-dependencies]
test = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "coverage",
]
quality = [
  "autoflake",
  "autopep8",
  "black",
  "flake8",
  "isort",
]

[tool.pytest.ini_options]
markers = [
  "ci_skip",
  "cuda",
]
filterwarnings = [
  "ignore:.*Invalid value for VR.*:UserWarning",
  "ignore:.*GPU available but not used.*:",
  "ignore:.*Trying to infer the `batch_size`.*:",
  "ignore:.*Consider increasing the value of the `num_workers` argument`.*:",
  "ignore:.*Set a lower value for log_every_n_steps if you want to see logs for the training epoch.*:",
  "ignore:.*`tensorboardX` has been removed as a dependency.*:",
  "ignore:.*You defined a `validation_step` but have no `val_dataloader`.*:",
]


# Sample script config
[project.scripts]
safetensors = "deep_helpers.safetensors:entrypoint"
