[metadata]
name = deep_helpers
version = 0.1.0
author = Scott Chase Waggener
description = Deep learning helper library
url = "https://github.com/TidalPaladin/deep-helpers"
keywords = deep learning pytorch lightning
license_file = LICENSE

[options]
python_requires = >=3.7
packages = find:
install_requires = 
  torch
  pytorch-lightning
  torchmetrics
  numpy
  pandas
  matplotlib
  strenum
  scikit-learn
  wandb
  jsonargparse[signatures]>=4.17.0

[options.extras_require]
test = 
  pytest
  pytest-mock
  pytest-cov
  coverage
quality = 
  autoflake
  autopep8
  black
  flake8
  isort

[pycodestyle]
max-line-length = 120
